--- a/homepage.html
+++ b/homepage.html
@@ -5,18 +5,32 @@
     <title>Tunity</title>
   </head>
   <body>
-    <h1 id="main-title">Tunity</h1>
-    <p id="summary">Search MusicBrainz for an artist</p>
-    <div class="search-form">
-      <form id="search">
-        <input
-          type="text"
-          id="artist-input"
-          name="artist"
-          value="Enter name..."
-        /><br />
-        <input type="submit" id="submit" value="Search" />
-      </form>
-    </div>
+    <section>
+      <div class="upper-section">
+        <h1 id="main-title">Tunity</h1>
+        <p id="summary">Search MusicBrainz For Music Albums</p>
+        <div class="search-form">
+          <form id="search">
+            <input
+              type="text"
+              id="artist-input"
+              name="artist"
+              value="Enter name..."
+            /><br />
+            <input type="submit" id="submit" value="Search" />
+          </form>
+        </div>
+      </div>
+    </section>
+    <section>
+      <div class="lower-section">
+        <h2 id="subtitle">Album Information</h2>
+        <ul id="album-list">
+          <li>Result</li>
+          <li>Result</li>
+          <li>Result</li>
+        </ul>
+      </div>
+    </section>
   </body>
 </html>
