Added placeholder text to search field

--- a/homepage.html
+++ b/homepage.html
@@ -2,20 +2,20 @@
 <html lang="en">
   <head>
     <link rel="stylesheet" href="style.css" />
+    <script src="scripts.js"></script>
     <title>Tunity</title>
   </head>
   <body>
     <section id="upper-section">
       <div class="main">
         <h1 id="title">Tunity</h1>
-        <p id="summary">Search MusicBrainz For Music Albums</p>
+        <p id="summary">Search MusicBrainz For Artist Information</p>
         <div class="search-form">
           <form id="search" role="search">
             <input
               type="text"
               id="artist-input"
-              name="artist"
-              value="Enter artist name..."
+              placeholder="Enter a name..."
             />
             <input type="submit" id="submit" value="Search" />
           </form>
@@ -25,7 +25,7 @@
     </section>
     <section id="lower-section">
       <div class="results">
-        <h2 id="subtitle">Album Information</h2>
+        <h2 id="subtitle">Results</h2>
         <ul id="album-list">
           <li>Result</li>
           <li>Result</li>
