Renamed some element IDs

--- a/homepage.html
+++ b/homepage.html
@@ -30,8 +30,8 @@
     </section>
     <section id="lower-section">
       <div id="results" hidden>
-        <h2 id="results-heading">Possible matches...</h2>
-        <ul id="artist-list"></ul>
+        <h1 id="results-heading">Possible matches...</h1>
+        <ul id="artist-names"></ul>
       </div>
     </section>
   </body>
