Added div section for albums

--- a/homepage.html
+++ b/homepage.html
@@ -29,9 +29,13 @@
       <hr class="solid" />
     </section>
     <section id="lower-section">
-      <div id="results" hidden>
+      <div id="results-artist" hidden>
         <h1 id="results-heading">Possible matches...</h1>
         <ul id="artist-names"></ul>
+      </div>
+      <div id="results-album" hidden>
+        <h1 id="albums">Albums</h1>
+        <ul id="album-names"></ul>
       </div>
     </section>
   </body>
