--- a/homepage.html
+++ b/homepage.html
@@ -8,7 +8,7 @@
   <body>
     <section id="upper-section">
       <div class="main">
-        <h1 id="title">Voiceseek</h1>
+        <h1 id="title">VoiceSeek</h1>
         <p id="summary">Search MusicBrainz For Artist Information</p>
         <div class="search-form">
           <form id="search" role="search">
