removed onclick from submit button

--- a/homepage.html
+++ b/homepage.html
@@ -3,7 +3,7 @@
   <head>
     <link rel="stylesheet" href="style.css" />
     <script src="scripts.js"></script>
-    <title>Tunity</title>
+    <title>VoiceSeek</title>
   </head>
   <body>
     <section id="upper-section">
@@ -17,12 +17,7 @@
               id="artist-input"
               placeholder="Enter a name..."
             />
-            <input
-              type="submit"
-              id="submit"
-              value="Search"
-              onclick="removeAll()"
-            />
+            <input type="submit" id="submit" value="Search" />
           </form>
         </div>
       </div>
