Summary is more speficit

--- a/homepage.html
+++ b/homepage.html
@@ -9,7 +9,7 @@
     <section id="upper-section">
       <div class="main">
         <h1 id="title">VoiceSeek</h1>
-        <p id="summary">Search MusicBrainz For Artist Information</p>
+        <p id="summary">Search MusicBrainz For Artist Releases</p>
         <div class="search-form">
           <form id="search" role="search">
             <input
