Removed album heading text

--- a/homepage.html
+++ b/homepage.html
@@ -29,7 +29,7 @@
         <ul id="artist-names"></ul>
       </div>
       <div id="results-album" hidden>
-        <h1 id="albums">Albums</h1>
+        <h1 id="albums"></h1>
         <ul id="album-names"></ul>
       </div>
     </section>
