Removed heading inner text

--- a/homepage.html
+++ b/homepage.html
@@ -25,7 +25,7 @@
     </section>
     <section id="lower-section">
       <div id="results-artist" hidden>
-        <h1 id="results-heading">Possible matches...</h1>
+        <h1 id="results-heading"></h1>
         <ul id="artist-names"></ul>
       </div>
       <div id="results-album" hidden>
